HAAR-3197: update to use standard webclient and move environment variables to helm files (#104)
* HAAR-3197: update to use standard webclient and move environemnt variables to helm files

* HAAR-3197: remove ResourceServerConfiguration to use default one form kotlin library